--- a/src/Sales.Domain/Sales.Domain.csproj
+++ b/src/Sales.Domain/Sales.Domain.csproj
@@ -13,4 +13,10 @@
 		<PackageReference Include="Dapper.Contrib" Version="2.0.78" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Entities\Branch\Events\" />
+	  <Folder Include="Entities\Customer\Events\" />
+	  <Folder Include="Entities\Products\Events\" />
+	</ItemGroup>
+
 </Project>
