--- a/src/Sales.Application/Sales.Application.csproj
+++ b/src/Sales.Application/Sales.Application.csproj
@@ -7,7 +7,10 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.10.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.10.0" />
+    <PackageReference Include="MassTransit" Version="8.2.5" />
+    <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
     <PackageReference Include="MediatR" Version="12.4.1" />
+    <!--<PackageReference Include="RabbitMQ.Client" Version="6.8.1" />-->
   </ItemGroup>
 
   <PropertyGroup>
