--- a/src/Sales.API/Dockerfile
+++ b/src/Sales.API/Dockerfile
@@ -15,19 +15,19 @@ COPY ["src/Sales.Application/Sales.Application.csproj", "src/Sales.Application/"
 COPY ["src/Sales.Infra/Sales.Infra.csproj", "src/Sales.Infra/"]
 COPY ["src/Sales.Domain/Sales.Domain.csproj", "src/Sales.Domain/"]
 
-# Restaurar dependências
+# Restaurar dependï¿½ncias
 RUN dotnet restore "./src/Sales.API/Sales.API.csproj"
 
-# Copiar todo o código fonte
+# Copiar todo o cï¿½digo fonte
 COPY . .
 
-# Definir diretório de trabalho
+# Definir diretï¿½rio de trabalho
 WORKDIR "/src/src/Sales.API"
 
-# Compilar a aplicação
+# Compilar a aplicaï¿½ï¿½o
 RUN dotnet build "./Sales.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-# Publicar a aplicação
+# Publicar a aplicaï¿½ï¿½o
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "./Sales.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
@@ -39,11 +39,11 @@ WORKDIR /app
 # Copiar os arquivos publicados
 COPY --from=publish /app/publish .
 
-# Criar o diretório de certificados
-RUN mkdir -p /app/certificates
+# Criar o diretï¿½rio de certificados
+# RUN mkdir -p /app/certificates
 
 # Copiar o certificado para o container
-COPY ./src/Sales.API/certificates/aspnetapp.pfx /app/certificates/
+# COPY ./src/Sales.API/certificates/aspnetapp.pfx /app/certificates/
 
 # Definir o ponto de entrada
 ENTRYPOINT ["dotnet", "Sales.API.dll"]
