--- a/src/Sales.API/appsettings.Development.json
+++ b/src/Sales.API/appsettings.Development.json
@@ -7,5 +7,9 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Initial Catalog=poc-sales; Data Source=localhost; User Id=sa; Password=Password@123;"
+  },
+  "MongoSettings": {
+    "ConnectionString": "mongodb://root:password@host.docker.internal:27017/?authSource=admin",
+    "DatabaseName": "EventStore"
   }
 }
