--- a/src/Sales.Infra/Sales.Infra.csproj
+++ b/src/Sales.Infra/Sales.Infra.csproj
@@ -1,11 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <Compile Remove="EventSourcing\Projections\**" />
+    <EmbeddedResource Remove="EventSourcing\Projections\**" />
+    <None Remove="EventSourcing\Projections\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Sales.Domain\Sales.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="MongoDB.Driver" Version="2.29.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
