--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   mssql:
     container_name: mssql_poc_sales
@@ -8,12 +10,16 @@ services:
       - ACCEPT_EULA=Y
       - SA_PASSWORD=Password@123
       - MSSQL_PID=Developer
+    networks:
+      - my_network
 
   create_db_poc_sales:
     image: mcr.microsoft.com/mssql-tools
     depends_on:
       - mssql
     command: /bin/bash -c 'until /opt/mssql-tools/bin/sqlcmd -S mssql -U sa -P "Password@123" -Q "create database [poc-sales]"; do sleep 5; done'
+    networks:
+      - my_network
 
   flyway_poc_sales:
     image: flyway/flyway
@@ -24,6 +30,35 @@ services:
     volumes:
       - ./sql:/flyway/sql
       - ./conf:/flyway/conf
+    networks:
+      - my_network
+
+  mongo:
+    image: mongo
+    container_name: mongo
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=password
+    ports:
+      - "27017:27017"
+    networks:
+      - my_network
+
+  mongo-express:
+    image: mongo-express
+    container_name: mexpress
+    environment:
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=root
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=password
+      - ME_CONFIG_MONGODB_URL=mongodb://root:password@mongo:27017/?authSource=admin
+      - ME_CONFIG_BASICAUTH_USERNAME=mexpress
+      - ME_CONFIG_BASICAUTH_PASSWORD=mexpress
+    ports:
+      - "8081:8081"
+    depends_on:
+      - mongo
+    networks:
+      - my_network
 
   webapi:
     container_name: sales-api
@@ -31,14 +66,17 @@ services:
       context: .
       dockerfile: ./src/Sales.API/Dockerfile
     ports:
-      - "8080:8080"  # Porta HTTP
-      - "8081:8081"  # Porta HTTPS
+      - "8080:8080"
     depends_on:
       - mssql
-      - create_db_poc_sales
-      - flyway_poc_sales
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__DefaultConnection=Server=mssql;Database=poc-sales;User=sa;Password=Password@123;
-      # - ASPNETCORE_Kestrel__Certificates__Default__Password=pocsales
-      # - ASPNETCORE_Kestrel__Certificates__Default__Path=/app/certificates/aspnetapp.pfx
+      - MongoSettings__ConnectionString=mongodb://root:password@mongo:27017/?authSource=admin
+      - MongoSettings__DatabaseName=SalesDatabase
+    networks:
+      - my_network
+
+networks:
+  my_network:
+    driver: bridge
