--- a/src/Sales.Domain/Sales.Domain.csproj
+++ b/src/Sales.Domain/Sales.Domain.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
 		<PackageReference Include="Dapper.Contrib" Version="2.0.78" />
+		<PackageReference Include="MongoDB.Bson" Version="2.29.0" />
 	</ItemGroup>
 
 </Project>
